--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -1,8 +1,8 @@
-.list {
+.list-item {
     cursor: pointer;
     width: min-content;
 }
-.list:hover {
+.list-item:hover {
     color: red;
     text-decoration: line-through;
 }
