--- a/0x05-Advanced-TODO/styles.css
+++ b/0x05-Advanced-TODO/styles.css
@@ -33,7 +33,17 @@
   [data-button-delete] {
     margin-left: .5rem;
   }
-  
-  button {
-    cursor: pointer;
-  }
+body {
+  background-color: #ffffff; /* Light background */
+  color: #000000; /* Dark text */
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition between modes */
+}
+/* styles.css */
+body.dark {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+button {
+  cursor: pointer;
+}
